welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:12: error: not found: value marquer
	marquer();
        ^PatternPicture:16: error: not found: value marquer
	marquer();
        ^