welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() 
{
def faireMotif()
{
	
def faireV()
{
	

	avance();
	marquer();
	avance();
	gauche();
	avance();
	marquer();
	gauche();
	avance();
	gauche();
}
}
faireMotif();
}
